<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearlayout"
    tools:context=".LoginActivity">


    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Login"-->
    <!--        android:textSize="20dp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:textColor="#ad168b"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:layout_marginLeft="35dp"/>-->




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:text="English(United Kingdom)" />

    <TextView

        android:id="@+id/instaImg"
        android:layout_width="318dp"
        android:layout_height="100dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="ImageGallery"
        android:textStyle="italic"
        android:textSize="50dp"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:background="@drawable/forget"
        android:id="@+id/tvusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:height="50dp"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:hint="Enter Email Here" />
    <EditText
        android:background="@drawable/forget"
        android:id="@+id/tvpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword"
        android:height="50dp"
        android:gravity="center"
        android:hint="Enter Password Here" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:id="@+id/btnlogin"
        android:gravity="center"
        android:background="#0652DD"
        android:width="290dp"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:layout_marginLeft="55dp"
        />

    <TextView
        android:id="@+id/etSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="15dp"
        android:text="Don't have account? Sign Up"
        android:textAlignment="center"
        android:textColor="#0652DD"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="forgot password? Get help with logging in"
        android:id="@+id/tvforrgetpass"
        android:layout_marginTop="15dp"

        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="#2A363B"
        />



</LinearLayout>