...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <TextView
        android:id="@+id/tvuserex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hello"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="355dp"
...
